--- a/style.css
+++ b/style.css
@@ -1,50 +1,70 @@
-@import url('https://fonts.googleapis.com/css2?family=Goudy+Bookletter+1911&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Lexend+Mega&display=swap");
+
+:root {
+  --color-primary: #000;
+  --color-secondary: #a3a3a3;
+  --text-primary: #fff;
+}
 
 *,
-*::after,
-*::before {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+*::before,
+*::after {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-    background-color: #fff;
+  font-family: "Lexend Mega", sans-serif;
+  background-color: var(--color-primary);
+  color: var(--text-primary);
 }
-
-#header-img {
-    margin: 50px auto;
-}
-
+/* Global */
 .container {
-    background-color: silver;
-    width: 80%;
-    height: 80%;
-    margin: auto;
-    margin-top: 20px;
-    margin-bottom: 20px;
+  max-width: 1100px;
+  margin: 0 auto;
+  overflow: auto;
+  padding: 0 40px;
 }
 
-
-
-#header {
-    text-align: center;
-    font-family: 'Goudy Bookletter 1911', serif;
-    font-size: 4rem;    
+/* Navbar */
+ul {
+  list-style-type: none;
+  display: inline;
+  margin: 20px;
 }
 
-.center {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%;
-  }
-
-.dates {
-    margin: 25px;
+.navbar ul {
+  display: flex;
+  justify-content: flex-end;
 }
 
-.dates li {
-    margin-left: 40px;
-    margin-top: 10px;
+.navbar ul li {
+  padding: 25px;
+}
+
+.navbar ul li:hover {
+  text-decoration: underline;
+  cursor: pointer;
+  color: var(--color-secondary);
+}
+
+a {
+  color: var(--text-primary);
+  text-decoration: none;
+}
+
+/* Header */
+.header {
+  width: 40%;
+}
+
+.header h1 {
+  margin: 100px auto 20px auto;
+  font-size: 3rem;
+}
+
+.header p {
+  font-size: 1.5rem;
+  margin-top: 30px;
 }
